--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="activity_currency_list">Cryptocurrency</string>
     <string name="activity_currency_list_price">$%.2f USD</string>
     <string name="activity_currency_list_price_unknown">Unknown</string>
+
+    <string name="connection_failed_error">Cannot load data. Please check your internet connection and try again.</string>
 </resources>
